# cam-stats

./: .gitignore  README.md  constraints.txt  main.py  pyproject.toml
src/xstream/benchmark/: config.py  energy.py  results.py  runner.py  timer.py
src/xstream/data/: loader.py
src/xstream/gradcam/: core.py  hooks.py
src/xstream/models/: registry.py
tests/: test_energy.py  test_gradcam.py
